--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>hello world</h1>
+
+    <script src="http://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
 </body>
 </html>
